--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "bcrypt": "^5.1.0",
+    "multipassify": "^1.1.0",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
     "react": "^18.2.0",
