--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@prisma/client": "^4.14.0",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
+    "axios": "^1.6.1",
     "bcrypt": "^5.1.0",
     "multipassify": "^1.1.0",
     "next": "^13.4.2",
